fix failing text color contrast with disabled select

--- a/src/components/Select/Select.scss
+++ b/src/components/Select/Select.scss
@@ -17,7 +17,7 @@ $stacking-order: (
 
 .disabled {
   .Content {
-    color: color('ink', 'lightest');
+    color: color('ink', 'lighter');
   }
 
   .InlineLabel {
